readable_test/typer/failing/TestArray1.grading.amy
object TestArray1 
val i : Int(32)[] = new Boolean[10]
end TestArray1